# lambda-NFA

./: CMakeLists.txt  README.md
include/: CFG.h  lnfa.h  pda.h  pdastate.h  pratt_parser.h  state.h
inputs/: input.txt  input2.txt
src/: CFG.cpp  lnfa.cpp  main.cpp  pda.cpp  pdastate.cpp  pratt_parser.cpp  state.cpp
